kubernetes/longhorn/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.longhorn.local.krlab.tech`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
    - match: Host(`longhorn.local.krlab.tech`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: local-krlab-tech-tls
